data/derived/comb/progs/unify/prog5825.ml.out
Characters 70-81:
  | h::t -> (h, l2) :: [helper t l2];;
                        ^^^^^^^^^^^
Error: This expression has type ('a * 'b) list
       but an expression was expected of type 'a * 'b
